# arxiv-mcp-server

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: badge.yml  lint.yml  publish.yml  tests.yaml  tests.yml
src/arxiv_mcp_server/: cli.py  config.py  resources.py  server.py  test.ipynb
src/arxiv_mcp_server/prompts/: __init__.py  deep_research_analysis_prompt.py  handlers.py  prompt_manager.py  prompts.py
src/arxiv_mcp_server/resources/: __init__.py  manager.py  papers.py  storage.py
src/arxiv_mcp_server/tools/: __init__.py  download.py  html_converter.py  list_papers.py  read_paper.py  search.py
tests/: conftest.py  test_config.py  test_server.py
tests/prompts/: test_prompt_integration.py  test_prompts.py
tests/resources/: test_manager.py  test_storage.py
tests/tools/: test_download.py  test_search.py
tests/utils/: test_paper_processing.py  test_utils.py
