[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arxiv-mcp-server"
version = "0.1.0"
description = "A flexible arXiv search and analysis service"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Joseph Blazick", email = "blazickjp@amazon.com" }
]
dependencies = [
    "arxiv>=2.1.0",
    "httpx>=0.24.0",
    "python-dateutil>=2.8.2"
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=arxiv_mcp_server"

[project.scripts]
arxiv-search = "arxiv_mcp_server.cli:main"